syntax = "proto3";

package exam;

option go_package = "https://github.com/bemillant/dsExam;exam";


service Dictionary {
    
    rpc Add (RequestAdd) returns (Ack) {}
    rpc Read (ReadRequest) returns (ReadOutcome) {}   
}

message RequestAdd {
    string name = 1;
    string key = 2;
    string value = 3; 
}

message Ack {
    string message = 1;
    bool success = 2;
}

message ReadOutcome {
    string status = 1;
    string value  = 2;
}

message ReadRequest {
    string key = 1;
}
